--- a/client/src/components/layout/AppNavBar.module.css
+++ b/client/src/components/layout/AppNavBar.module.css
@@ -16,7 +16,7 @@
 
 .app_nav_bar > ul {
     list-style: none;
-    padding: 0.6em 4% 0.9em 0;
+    padding: 0.6em 4%;
     align-items: center;
     justify-content: space-around;
     gap: 1em;
