Simplificação e padronização do código dos componentes de formulário e páginas de criação de perfil + Mudança no processamento de erros dos formulários + Mudança na verificação de login + segurança contra ataques de força bruta

--- a/client/src/components/form/SubmitButton.module.css
+++ b/client/src/components/form/SubmitButton.module.css
@@ -1,5 +1,4 @@
-.submitButton {
-    position: relative;
+.submit_button {
     background-color: var(--ligth-theme-color);
     border: 1px solid var(--dark-theme-color);
     height: max-content;
@@ -13,7 +12,7 @@
     transition: all 0.2s ease-in;
 }
 
-.submitButton:hover {
+.submit_button:hover {
     background-color: var(--dark-theme-color);
     border-color: var(--light-font-color);
     color: var(--light-font-color);
