--- a/client/src/components/form/EditProfileForm.module.css
+++ b/client/src/components/form/EditProfileForm.module.css
@@ -4,17 +4,13 @@
     align-items: center;
     justify-content: space-between;
     width: 21em;
-    height: 100%;
-    min-height: 39em;
-    transition: all 1s ease;
+    height: max-content;
     overflow: auto;
     border: 3px solid var(--ligth-font-color);
     border-radius: 1.5em;
-    padding: 1em;
+    padding: 1em;   
     backdrop-filter: brightness(0.2);
     background-color: #000000c5;
-    height: max-content;
-    display: flex;
     gap: 1em;
 }
 
@@ -38,7 +34,7 @@
     gap: 1em;
 }
 
-.edit_profile_form h2 {
+.edit_profile_form > h2 {
     font-size: 2em;
     letter-spacing: 1px;
     color: var(--ligth-theme-color);
@@ -58,21 +54,10 @@
     .edit_profile_form {
         width: 100%;
         height: 100%;
-        min-height: unset;
-        transition: opacity 1s ease, transform 1s ease 1s;
-        position: absolute;
-        left: 0;
-        top: 0;
-        overflow: auto;
         border-radius: 0;
-    }
-
-    .edit_profile_form h2 {
-        letter-spacing: 1px;
-        color: var(--ligth-theme-color);
+        border: none;
     }
 }
-
 
 @media screen and (min-width: 1500px) {
     .edit_profile_form {
@@ -83,7 +68,7 @@
         font-size: 1.05em;
     }
 
-    .edit_profile_form h2 {
+    .edit_profile_form > h2 {
         font-size: 3em;
     }
 
