--- a/client/src/components/form/LoginForm.module.css
+++ b/client/src/components/form/LoginForm.module.css
@@ -1,4 +1,4 @@
-.loginForm {
+.login_form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,7 +42,7 @@
     margin-bottom: 0.4em;
 }
 
-.loginForm h2 {
+.title_container > h2 {
     font-size: 2em;
     letter-spacing: 1px;
     color: var(--ligth-theme-color);
@@ -101,30 +101,16 @@
 }
 
 @media screen and (max-width: 720px) {
-    .loginForm {
+    .login_form {
         width: 100%;
-        height: 100%;
         transition: opacity 1s ease, transform 1s ease 1s;
         position: absolute;
         left: 0;
         top: 0;
         padding: 1em;
-        overflow: auto;
-    }
-
-    .form_visible {
-        opacity: 1;
-        transform: translateY(0)
     }
     
     .form_hidden {
-        opacity: 0;
         transform: translateY(100%);
-    }
-
-    .loginForm h2 {
-        font-size: 2em;
-        letter-spacing: 1px;
-        color: var(--ligth-theme-color);
     }
 }
