--- a/client/src/components/form/MainInput.module.css
+++ b/client/src/components/form/MainInput.module.css
@@ -35,7 +35,7 @@
     height: 3em;
     border-radius: 5px;
     border: 1px solid var(--ligth-font-color);
-    background-color: transparent;
+    background-color: #00000096;
     padding: 0 1em;
     letter-spacing: 0.5px;
     outline: none;
