--- a/client/src/components/layout/SearchInput.module.css
+++ b/client/src/components/layout/SearchInput.module.css
@@ -1,4 +1,4 @@
-.input_search_field {
+.search_input {
     border-bottom: 1px solid var(--ligth-font-color);
     padding: 0.5em 0;
     margin: 0 1em;
@@ -6,18 +6,18 @@
     height: 2em;
 }
 
-.input_search_field > label {
+.search_input > label {
     height: 100%;
     padding-right: 0.6em;
 }
 
-.input_search_field > input{
+.search_input > input{
     width: 100%;
     background-color: unset;
     border: none;
     outline: none;
 }
 
-.input_search_field > label > img{
+.search_input > label > img{
     height: 100%;
 }
