--- a/client/src/components/pages/Home.module.css
+++ b/client/src/components/pages/Home.module.css
@@ -13,7 +13,7 @@
 .posts_ending {
     width: 100%;
     height: max-content;
-    padding: 1em 0;
+    padding: 1em;
     display: flex;
     align-items: center;
     text-align: center;
@@ -21,37 +21,34 @@
     line-height: 2em;
     letter-spacing: 1px;
     border-top: 3px solid var(--ligth-theme-color);
-    border-bottom: 1px solid var(--ligth-font-color);
     background-color: var(--dark-bg-color);
 }
 
 .go_to_top {
-    padding: 0.5em;
+    padding: 0.5em 0.75em;
     border-radius: 50%;
     background-color: #000000d8;
     position: fixed;
     right: 1em;
-    bottom: calc(4.8em + 1em);
+    bottom: calc(5.8em);
     border: 2px solid var(--ligth-bg-color);
     z-index: 1;
     cursor: pointer;
 }
 
-.go_to_top img {
+.go_to_top > img {
     height: 1.5em;
-    width: 2em;
+    width: 1.5em;
     display: block;
 }
 
 @media screen and (max-width: 720px) {
     .posts_section {
-        padding: 4.6em 0 3.9em 0;
         margin-left: 0;
     }
 
     .posts_ending {
         border-top: 1px solid var(--ligth-theme-color);
-        border-bottom: 1px solid var(--ligth-font-color);
     }
 }
 
