--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --ligth-theme-color: rgb(0, 191, 99);
-  --dark-theme-color: rgb(0, 87, 45);
+  --ligth-theme-color: #00bf63;
+  --dark-theme-color: #00572d;
   --dark-font-color: #000000;
   --ligth-font-color: #e7e7e7;
   --alert-color: #ffea02;
@@ -37,4 +37,14 @@ main {
 
 main {
   position: relative;
+}
+
+.loading {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  filter: drop-shadow(0 20px 1px rgb(26, 26, 26));
 }
