--- a/client/src/components/layout/PostItemsContainer.module.css
+++ b/client/src/components/layout/PostItemsContainer.module.css
@@ -18,6 +18,7 @@
     transition: all 0.3s ease-in-out;
     padding: 0.4em;
     cursor: pointer;
+    position: relative;
 }
 
 .comment_text {
@@ -30,6 +31,17 @@
     white-space: pre-wrap;
     word-break: break-all;
     display: flex;
+    margin-top: 0.7em;
+}
+
+.comment_date {
+    color: var(--ligth-bg-color);
+    font-size: 0.6em;
+    width: max-content;
+    margin-left: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .post_items_container > li:hover,
