Estilização da página de perfil + Lógica para checagem de estado de seguido e denunciado de um perfil + rotas e consultas para recuperar estado de denunciado do perfil + Correção no ajuste de tamanho do componente post + Responsividade da página de perfil + Redirecionamento para página de perfil ao clicar no container de perfil da postagem

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@
   --dark-font-color: #000000;
   --ligth-font-color: #e7e7e7;
   --alert-color: #ffea02;
+  --red-color: #ff0000; 
   --dark-bg-color: #101010;
   --ligth-bg-color: #3c3c3c;
   --white-bg-color: #898989;
