--- a/client/src/components/pages/Profile.module.css
+++ b/client/src/components/pages/Profile.module.css
@@ -1,4 +1,267 @@
-.profile_preferences img {
+.profile_page {
+    display: flex;
+    flex-direction: column;
+    padding: 2em 2em 1em;
+    align-items: center;
+    background-color: var(--dark-bg-color);
+    gap: 1.5em;
+}
+
+.profile_page > hr {
+    width: 100%;
+}
+
+.profile_main_info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile_main_info > span {
+    color: var(--ligth-theme-color);
+    font-weight: bold;
+    font-size: 1.8em;
+}
+
+.profile_main_info > p {
+    margin-top: 2em;
+    text-align: center;
+    max-width: 25em;
+}
+
+/* .profile_qualifications {
+
+} */
+
+.profile_stats {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.profile_stats > div:nth-child(2) {
+    cursor: pointer;
+}
+
+.profile_stats > div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3em;
+    text-align: center;
+}
+
+.profile_stats > div > span:first-child {
+    color: var(--dark-theme-color);
+    text-shadow: 2px 2px 2px var(--ligth-theme-color);
+    font-size: 2.5em;
+    font-weight: bold;
+}
+
+.profile_preferences {
+    list-style: none;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    gap: 1em 3em;
+    flex-wrap: wrap;
+}
+
+.profile_preferences > li {
+    border: 2px solid var(--dark-theme-color);
+    background-color: var(--ligth-theme-color);
+    border-radius: 15px;
+    padding: 0.3em;
+    display: flex;
+    align-items: center;
+    gap: 0.6em;
+    box-shadow: 8px 8px 5px black;
+    cursor: pointer;
+}
+
+.profile_preferences > li > img {
+    transition: all 0.2s ease-in-out;
     height: 2em;
     width: 2em;
+    display: block;
+}
+
+.profile_preferences > li:hover > img {
+    transform: translateY(-8px);
+    filter: drop-shadow(0 8px 0 black);
+}
+
+.profile_preferences > li > span {
+    color: var(--dark-font-color);
+}
+
+.profile_actions {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.profile_actions > button {
+    outline: none;
+    border-radius: 10px;
+    padding: 0.3em;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.follow_button {
+    background-color: unset;
+    border: 1px solid var(--ligth-theme-color);
+    width: 15em;
+    font-weight: bold;
+}
+
+.follow_button_selected,
+.follow_button:hover {
+    color: var(--dark-font-color);
+    background-color: var(--ligth-theme-color);
+}
+
+.follow_button_selected:hover {
+    color: var(--ligth-font-color);
+    background-color: unset;
+}
+
+.complaint_button {
+    background-color: unset;
+    border: 1px solid var(--red-color);
+}
+
+.complaint_button_selected,
+.complaint_button:hover {
+    background-color: var(--red-color);
+    border: none;
+}
+
+.complaint_button > img {
+    filter: drop-shadow(2px 2px 1px black);
+}
+
+.profile_actions > button > img {
+    height: 2em;
+    width: 2em;
+    display: block;
+}
+
+.profile_complaint {
+    position: fixed;
+    right: 50%;
+    top: 3em;
+    transform: translateX(50%);
+    height: 90dvh;
+    width: 90dvw;
+    overflow: auto;
+    background-color: var(--dark-bg-color);
+    border: 2px solid var(--dark-theme-color);
+    z-index: 3;
+    text-align: left;
+    cursor: default;
+}
+
+.profile_complaint > span {
+    font-size: 0.8em;
+    position: relative;
+    top: 0.4em;
+    left: 0.4em;
+}
+
+.profile_complaint > form {
+    padding: 0.5em 0.5em 0 0.5em;
+    text-align: center;
+}
+
+.profile_posts {
+    width: calc(100dvw - 2em);
+    height: max-content;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+}
+
+.profile_posts > div {
+    width: 20%;
+    aspect-ratio: 1 / 1;
+    border: 1px solid var(--ligth-theme-color);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+    z-index: 1; 
+}
+
+.profile_posts > div::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 10px 10px 60px black, inset -10px -10px 60px black;
+    opacity: 0; 
+    transition: all 0.3s ease; 
+    z-index: 2; 
+}
+
+.profile_posts > div:hover::after {
+    opacity: 1; 
+}
+
+.profile_posts > div > span {
+    position: absolute;
+    top: 0.5em;
+    right: 0.5em;
+    z-index: 2;
+    font-weight: bold;
+    text-shadow: 2px 2px 1px black;
+}
+
+.profile_posts > div > img {
+    height: calc(100% + 2.8em);
+    width: calc(100% + 2.8em);
+    object-fit: cover;
+    display: block;
+    z-index: 1; 
+    transition: all 0.3s ease; 
+}
+
+.profile_posts > div:hover > img {
+    transform: scale(0.9);
+}
+
+@media screen and (max-width: 720px) {
+    .profile_page {
+        padding: 1em 1em 0;
+    }
+
+    .profile_posts {
+        width: calc(100dvw - 0.7em);
+    }
+
+    .profile_posts > div {
+        width: 33.33%;
+    }
+
+    .profile_stats {
+        font-size: 0.85em;
+    }
+    
+    .profile_preferences > li {
+        border: 1px solid var(--dark-theme-color);
+        font-size: 0.9em;
+    }
+
+    .profile_preferences {
+        width: 100%;
+    }
+    
+    .profile_preferences > li:hover > img {
+        transform: translateY(-5px);
+        filter: drop-shadow(0 5px 0 black);
+    }
 }
