--- a/client/src/components/layout/ProfileNavBar.module.css
+++ b/client/src/components/layout/ProfileNavBar.module.css
@@ -1,3 +1,7 @@
+*:has(> .profile_nav_bar) {
+    margin-top: 4.2em;
+}
+
 .profile_nav_bar,
 .profile_nav_bar > ul {
     display: flex;
@@ -16,7 +20,7 @@
 
 .profile_nav_bar > ul {
     list-style: none;
-    padding: 0.2em 4%;
+    padding: 0 4%;
     align-items: center;
     justify-content: space-between;
     gap: 1em;
