--- a/client/src/components/layout/Post.module.css
+++ b/client/src/components/layout/Post.module.css
@@ -161,6 +161,10 @@
     background-color: var(--dark-bg-color);
     border: 2px solid var(--dark-theme-color);
     z-index: 3;
+    padding: 0.5em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 .post_actions > div:nth-child(2) .actions_items {
@@ -179,7 +183,6 @@
 }
 
 .actions_items > form {
-    padding: 0.5em 0.5em 0 0.5em;
     text-align: center;
 }
 
