--- a/client/src/components/layout/SearchInput.module.css
+++ b/client/src/components/layout/SearchInput.module.css
@@ -1,23 +1,29 @@
 .search_input {
     border-bottom: 1px solid var(--ligth-font-color);
     padding: 0.5em 0;
-    margin: 0 1em;
     display: flex;
     height: 2em;
 }
 
-.search_input > label {
+.search_input > :where(label, button) {
     height: 100%;
     padding-right: 0.6em;
 }
 
-.search_input > input{
+.search_input > button {
+    background: none;
+    outline: none;
+    border: none;
+}
+
+.search_input > input {
     width: 100%;
     background-color: unset;
     border: none;
     outline: none;
 }
 
-.search_input > label > img{
+.search_input > :where(label, button) > img{
     height: 100%;
+    cursor: pointer;
 }
