Término da estilização da págin de pesquisa + Criação do componente ProfileBiggerContainer + Mudança na consulta de recuperação das tags para incluir número de seguidores do perfil

--- a/client/src/components/layout/SearchInput.module.css
+++ b/client/src/components/layout/SearchInput.module.css
@@ -18,6 +18,7 @@
 
 .search_input > input {
     width: 100%;
+    height: max-content;
     background-color: unset;
     border: none;
     outline: none;
