--- a/client/src/components/layout/ProfilePhotoContainer.module.css
+++ b/client/src/components/layout/ProfilePhotoContainer.module.css
@@ -44,6 +44,12 @@
     border: 3px solid var(--dark-theme-color);
 }
 
+.big {
+    height: 5em;
+    width: 5em;
+    border: 3.5px solid var(--dark-theme-color);
+}
+
 .large {
     height: 8em;
     width: 8em;
