--- a/client/src/components/layout/ProfileBiggerContainer.module.css
+++ b/client/src/components/layout/ProfileBiggerContainer.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--dark-bg-color);
+    background-image: linear-gradient(to top, black, var(--ligth-bg-color));
     border: 1px solid var(--white-bg-color);
     padding: 0.5em;
     border-radius: 15px;
@@ -10,18 +10,41 @@
     cursor: pointer;
     width: 8em;
     height: 12em;
+    transition: all 0.2s ease-in-out;
 }
 
-.profile_bigger_container > span:nth-child(2) {
+.profile_bigger_container:hover {
+    border: 2px solid var(--ligth-theme-color);
+}
+
+.profile_info {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: space-between;
+}
+
+.profile_info > span:first-child {
     font-weight: bold;
     font-size: 1.2em;
     color: var(--ligth-theme-color);
-    margin-top: 0.4em;
 }
 
-.profile_bigger_container > span:last-child {
-    margin-top: auto;
-    margin-right: auto;
+.profile_info > span:last-child {
     font-size: 0.85em;
     color: var(--white-bg-color);
+}
+
+@media screen and (max-width: 720px) {
+    .profile_bigger_container {
+        flex-direction: row;
+        width: 100%;
+        height: 6em;
+        gap: 1em;
+    }
+
+    .profile_info {
+        height: 100%;
+        text-align: right;
+    }
 }
