--- a/client/src/components/layout/ProfileNavBar.module.css
+++ b/client/src/components/layout/ProfileNavBar.module.css
@@ -2,6 +2,10 @@
     margin-top: 4.2em;
 }
 
+*:has(.profile_nav_bar) {
+    min-height: 1em;    
+}
+
 .profile_nav_bar,
 .profile_nav_bar > ul {
     display: flex;
