--- a/client/src/components/pages/SearchPage.module.css
+++ b/client/src/components/pages/SearchPage.module.css
@@ -65,8 +65,12 @@
         max-height: 46em;
     }
 
+    .profiles {
+        max-height: 20em;
+    }
+
     .result {
-        font-size: 0.85em;
-        margin: 4em -1em 0;
+        /* font-size: 0.85em; */
+        margin: 4em -0.7em 0;
     }
 }
