Aplicação dos redirecionamnetos para as telas de perfis ou pesquisa ao clicar nas marcações das postagens ou em hashtags, assim como ao clicar nos esportes das preferências na tela de perfil ou nos resultados de pesquisa + correção na consulta para obter resultados de esportes da pesquisa

--- a/client/src/components/pages/EditProfile.module.css
+++ b/client/src/components/pages/EditProfile.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     background: var(--ligth-theme-color) url(../../img/background/bgLogin.svg) center;
-    height: 100%;
+    min-height: 100dvh;
     background-size: cover;
     background-attachment: fixed;
 }
