--- a/client/src/components/pages/Login.module.css
+++ b/client/src/components/pages/Login.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    min-height: 100dvh;
     background: var(--ligth-theme-color) url(../../img/background/bgLogin.svg) center;
     background-size: cover;
     background-attachment: fixed;
