Mudança na consulta que recupera postagens, adicionando mecanismos que valorizam postagens com base no número de interações e tempo desde sua publicação + Simplificação do código da página de ppesquisa + Exibição do número de resultados da pesquisa

--- a/client/src/components/pages/SearchPage.module.css
+++ b/client/src/components/pages/SearchPage.module.css
@@ -55,6 +55,13 @@
     max-height: 28em;
 }
 
+p.results_number {
+    text-align: left;
+    font-size: 2em;
+    color: var(--white-bg-color);
+    padding-left: 1em;
+}
+
 @media screen and (max-width: 720px) {
     .posts {
         width: 100dvw;
