Implementação do sistema de infinite scroll nas telas que exibem posts e perfis: feed, pesquisa de posts e perfis + mudança na forma de obtenção dos perfis: perfis são carregados após um texto de procura ser setado + exibição do loading quando os mais perfis e postagens estiverem sendo carregados

--- a/client/src/components/layout/PostItemsContainer.module.css
+++ b/client/src/components/layout/PostItemsContainer.module.css
@@ -24,6 +24,11 @@
     position: relative;
 }
 
+.post_items_container > .loading_li { 
+    height: 100px;
+    max-height: unset;
+}
+
 .post_items_container > .comment {
     display: flex;
     align-items: flex-start;
