--- a/client/src/components/layout/ProfileBiggerContainer.module.css
+++ b/client/src/components/layout/ProfileBiggerContainer.module.css
@@ -1,16 +1,15 @@
 .profile_bigger_container {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    background-image: linear-gradient(to top, black, var(--ligth-bg-color));
-    border: 1px solid var(--white-bg-color);
+    border: 2px solid transparent;
     padding: 0.5em;
     border-radius: 15px;
     letter-spacing: 0.5px;
     cursor: pointer;
-    width: 8em;
-    height: 12em;
     transition: all 0.2s ease-in-out;
+    width: 100%;
+    height: 6em;
+    gap: 1em;
 }
 
 .profile_bigger_container:hover {
@@ -20,8 +19,11 @@
 .profile_info {
     display: flex;
     flex-direction: column;
+    height: 100%;
     flex: 1;
-    justify-content: space-between;
+    justify-content: center;
+    text-align: left;
+    position: relative;
 }
 
 .profile_info > span:first-child {
@@ -31,20 +33,9 @@
 }
 
 .profile_info > span:last-child {
+    position: absolute;
     font-size: 0.85em;
     color: var(--white-bg-color);
-}
-
-@media screen and (max-width: 720px) {
-    .profile_bigger_container {
-        flex-direction: row;
-        width: 100%;
-        height: 6em;
-        gap: 1em;
-    }
-
-    .profile_info {
-        height: 100%;
-        text-align: right;
-    }
+    bottom: 0;
+    min-width: max-content;
 }
