--- a/client/src/components/layout/Post.module.css
+++ b/client/src/components/layout/Post.module.css
@@ -109,6 +109,7 @@
 .post_actions > div > li > span {
     font-size: 0.6em;
     letter-spacing: 1px;
+    min-height: 0.6em;
 }
 
 .caption {
@@ -184,6 +185,21 @@
 
 .actions_items > form {
     text-align: center;
+}
+
+.complainted_post {
+    filter: blur(10px);
+}
+
+.complainted_post::before {
+    content: "Postagem denúnciada";
+    color: var(--alert-color);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: 720px) {
