--- a/client/src/components/form/PhotoInput.module.css
+++ b/client/src/components/form/PhotoInput.module.css
@@ -1,7 +1,7 @@
 .photo_input {
     position: relative;
-    min-height: 3em;
-    width: 3em;
+    min-height: min-content;
+    width: max-content;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -11,11 +11,9 @@
 }
 
 .photo_input > label {
-    width: 100%;
-    height: 100%;
+    width: max-content;
+    height: max-content;
     border-radius: inherit;
-    position: absolute;
-    top: 0;
     text-align: center;
 }
 
