--- a/client/src/components/form/SubmitButton.module.css
+++ b/client/src/components/form/SubmitButton.module.css
@@ -2,6 +2,7 @@
     background-color: var(--ligth-theme-color);
     border: 1px solid var(--dark-theme-color);
     height: max-content;
+    width: max-content;
     padding: 0.4em 1em;
     font-weight: bold;
     font-size: 0.9em;
