--- a/client/src/components/layout/ConfirmationBox.module.css
+++ b/client/src/components/layout/ConfirmationBox.module.css
@@ -3,26 +3,34 @@
     height: max-content;
     display: flex;
     flex-direction: column;
-    gap: 2em;
-    padding: 1.2em 1.8em;
-    justify-content: center;
+    gap: 1.8em;
+    padding: 0.6em 1.8em 0.6em;
+    align-items: center;
     position: fixed;
     left: 50%;
+    top: 0.5em;
     transform: translateX(-50%);
     animation: goDown 1s ease-in-out 1;
+    z-index: 10;
+    background-color: var(--dark-bg-color);
+    border-radius: 20px;
+    border: 2px solid var(--dark-theme-color);
 }
 
 .confirmation_box > p {
     width: 100%;
     height: max-content;
     text-align: center;
+    letter-spacing: 0.5px;
 }
 
 .confirmation_box > span {
-    position: absolute;
+    position: relative;
     color: var(--white-bg-color);
-    left: 0.5em;
-    top: 0.5em;
+    margin-right: auto;
+    left: -1em;
+    font-size: 0.9em;
+    cursor: pointer;
 }
 
 @keyframes goDown {
