--- a/client/src/components/layout/ProfilePhotoContainer.module.css
+++ b/client/src/components/layout/ProfilePhotoContainer.module.css
@@ -28,11 +28,13 @@
 
 .tiny {
     height: 1.5em;
+    height: 1.5em;
     width: 1.5em;
     border: 1px solid var(--dark-theme-color);
 }
 
 .short {
+    height: 2.3em;
     height: 2.3em;
     width: 2.3em;
     border: 2px solid var(--dark-theme-color);
@@ -40,18 +42,21 @@
 
 .medium {
     height: 3em;
+    min-height: 3em;
     width: 3em;
     border: 3px solid var(--dark-theme-color);
 }
 
 .big {
     height: 5em;
+    min-height: 5em;
     width: 5em;
     border: 3.5px solid var(--dark-theme-color);
 }
 
 .large {
     height: 8em;
+    min-height: 8em;
     width: 8em;
     border: 4px solid var(--dark-theme-color);
 }
