--- a/client/src/components/pages/config/Configs.module.css
+++ b/client/src/components/pages/config/Configs.module.css
@@ -6,6 +6,29 @@
     height: 100%;
     align-items: center;
 }
+.about_info {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+ul.about_themes {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.8em;
+}
+
+ul.about_themes > li {
+    width: max-content;
+    text-align: center;
+    cursor: pointer;
+}
+
+.selected_about_theme {
+    color: var(--ligth-theme-color);
+}
 
 ul.config_items {
     list-style: none;
