Términa da lógica de cofnigurações do perfil + Correções nas consultas que recuperam histórico de postagens interagidas + Correção e testes das funções que definem se um perfil pode comentar, marcar e compartilhar algo com outro perfil + Correção nas requisições que recuperam seguidores e seguidos

--- a/client/src/components/layout/Post.module.css
+++ b/client/src/components/layout/Post.module.css
@@ -192,15 +192,8 @@
     filter: blur(10px);
 }
 
-.complainted_post::before {
-    content: "Postagem denúnciada";
-    color: var(--alert-color);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+.complainted_post * {
+    pointer-events: none;
 }
 
 @media screen and (max-width: 720px) {
