--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
   --alert-color: #ffea02;
   --red-color: #ff0000; 
   --dark-bg-color: #101010;
-  --ligth-bg-color: #3c3c3c;
+  --ligth-bg-color:rgb(4, 4, 4);
   --white-bg-color: #898989;
 }
 
