--- a/server/templates/email.html
+++ b/server/templates/email.html
@@ -11,15 +11,33 @@
         <title>Athlete Connect E-mail</title>
     </head>
 
-    <body styles="font-family: 'Raleway', sans-serif; font-variant-numeric: lining-nums; padding: 1.5em 2em; background-image: url(https://asset.cloudinary.com/ddg7swr5r/343de0482e170861298db873e27fbdc1); display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <img src="https://asset.cloudinary.com/ddg7swr5r/42953378b03fec328147abd408db6cd5" alt="Social Media Icon" style="height: 3em; width: 3em; border-radius: 50%; display: block; margin: auto;">
+    <body styles="font-family: 'Raleway', sans-serif; font-variant-numeric: lining-nums; padding: 0; margin: 0;">
+        <table role="presentation" width="100%" style="background-image: url(https://res.cloudinary.com/ddg7swr5r/image/upload/fl_preserve_transparency/v1738789753/EmailBg_oskuze.jpg?_s=public-apps); background-size: cover; background-position: center; height: 60vh;">
+            <tr style="height: 100%;">
+                <td style="padding: 1.5em 2em; text-align: center; height: 100%;">            
+                    <div class="message" style="margin: auto;">
+                        {% if profile_photo_path %}
+                            <img src="{{ profile_photo_path }}" alt="Profile Photo" style="height: 5em; width: 5em; border-radius: 50%; display: block; margin: auto; border: 3.5px solid #00572d;">
+                        {% endif %}
 
-        <div class="message" style="display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 1em; margin: auto;">
-            {% if profile_photo_path %}
-                <img src="{{ profile_photo_path }}" alt="Profile Photo" style="height: 3em; width: 3em; border-radius: 50%; display: block; margin: auto;">
-            {% endif %}
-        
-            <p style="color: #e7e7e7; width: 100%; height: max-content; text-align: center; letter-spacing: 0.4px;">{{ message }}</p>
-        </div>
+                        {% if key_word %}
+                            {% if isAlert %}
+                                <h1 style="color: #ffea02; width: 100%; height: max-content; text-align: center; letter-spacing: 1px;">
+                                    {{ key_word }}
+                                </h1>
+                            {% else %}
+                                <h1 style="color: #00bf63; width: 100%; height: max-content; text-align: center; letter-spacing: 1px;">
+                                    {{ key_word }}
+                                </h1>
+                            {% endif %}
+                        {% endif %}
+                    
+                        <p style="color: #e7e7e7; width: 100%; height: max-content; text-align: center; letter-spacing: 0.4px; font-size: 1.15em;">
+                            {{ message }}
+                        </p>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
