Mudança no template de email + Correções nas funções que envolvem o envio de emails + Adição de argumentos: indicação de alerta, palavra/frase chave na função de envio de email + verificação de permissão antes do envio de email

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
   --alert-color: #ffea02;
   --red-color: #ff0000; 
   --dark-bg-color: #101010;
-  --ligth-bg-color:rgb(4, 4, 4);
+  --ligth-bg-color: #3c3c3c;
   --white-bg-color: #898989;
 }
 
