Criação da página de notificações + Criação das rotas e funções para recuperar as notificações e solicitações para seguir um perfil + Funções para checar se as notificações de um perfil já atingiram o limite diário

--- a/client/src/components/pages/PostPage.module.css
+++ b/client/src/components/pages/PostPage.module.css
@@ -1,7 +1,15 @@
 .post_page {
     min-height: 100dvh;
+    padding: 0 10em;
     background-color: var(--dark-bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow-y: auto;
+}
+
+@media screen and (max-width: 720px) {
+    .post_page {
+        padding: 0;
+    }
 }
