--- a/client/src/components/layout/Notification.module.css
+++ b/client/src/components/layout/Notification.module.css
@@ -1,26 +1,38 @@
 .notification {
     width: 100%;
-    min-width: max-content;
     display: flex;
     flex-direction: column;
     gap: 0.5em;
-    padding: 0.6em 1em;
+    padding: 0.6em 0.6em 0;
     cursor: pointer;
+    border: 2px solid black;
+    box-shadow: 5px 10px 10px black;
+    transition: all 0.3s ease-in-out;
 }
 
-.email_main_content {
+.notification:hover {
+    transform: scale(0.975);
+    box-shadow: none;
+}
+
+.main_content {
     display: flex;
+    align-items: center;
+    gap: 1em;
 }
 
-.email_main_content > p {
+.main_content > p {
     flex: 1;
     letter-spacing: 0.3px;
+    letter-spacing: 0.4px;
+    text-align: justify;
 }
 
-.email_main_content > img {
+.main_content > img {
     height: 2.5em;
     width: 2.5em;
     display: block;
+    margin-left: 1em;
 }
 
 .notification > span {
