--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@
   padding: 0;
   box-sizing: border-box;
   /* font-family: "Roboto", "Open Sans", sans-serif; */
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway", "Roboto", sans-serif;
   font-variant-numeric: lining-nums;
   color: var(--ligth-font-color);
   user-select: none;
