Criação do Places, páginas de procura de lugares para praticar esportes, marcadas por outros usuários + rotas e funções para o funcinamento do Places (obter localizações com base em texto da pesquisa + marcar um lugar) + verificação da permissão de localização

--- a/client/src/components/layout/AppNavBar.module.css
+++ b/client/src/components/layout/AppNavBar.module.css
@@ -38,7 +38,7 @@
     background-color: var(--ligth-bg-color);
 }
 
-.app_nav_bar > ul > li > img {
+.app_nav_bar > ul > li > :where(img, svg) {
     height: 1.5em;
     display: block;
 }
