--- a/client/src/components/layout/Message.module.css
+++ b/client/src/components/layout/Message.module.css
@@ -34,6 +34,30 @@
     background-color: var(--alert-color);
 }
 
-.success {
+.success,
+.default {
     background-color: var(--ligth-theme-color);
+}
+
+.message.default {
+    flex-direction: column;
+    top: 2em;
+    right: unset;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%;
+    padding-top: 1.5em;
+}
+
+.message.default > span {
+    text-align: center;
+}
+
+.message.default > img {
+    border: 1px solid black;
+    position: absolute;
+    left: 50%;
+    top: -1.5em;
+    transform: translateX(-50%);
+    height: 2.5em;
 }
