criação da tela de confirmação de identidade + rotas e funções para gerar e processar o código alfanúmerico gerado e enviado ao servidor para verificação e envio de mensagem de falhas + instalação e aplicação do redis, servidor que disponibiliza bancos para armazenamento de dados em memória, nesse caso utilizado para autenticação (operações envolvendo o código de confirmação)

--- a/server/templates/email.html
+++ b/server/templates/email.html
@@ -25,7 +25,7 @@
                         {% endif %}
 
                         {% if key_word %}
-                            {% if isAlert %}
+                            {% if is_alert %}
                                 <h1 style="color: #ffea02; width: 100%; height: max-content; text-align: center; letter-spacing: 1px;">
                                     {{ key_word }}
                                 </h1>
